--- a/frontPage.html
+++ b/frontPage.html
@@ -13,18 +13,53 @@
     <!-- Latest compiled JavaScript -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+    <!-- my javaScript -->
+    <script type='text/javascript' src='script.js'></script>
+
     <!-- myCSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
-
 </head>
 
 <body>
 
-    <div class="container">
-        <h1>hello</h1>
+    <div class="container" id="header">
+        <h1> FETCH</h1>
     </div>
 
+    <section class="container-fluid text-center" id="food">
 
+        <div class="row ">
+            <figure class="col-sm-6 ">
+                <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg" />
+                <p> Vons</p>
+            </figure>
+
+            <figure class="col-sm-6">
+                <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg" />
+                <p> TJ's</p>
+            </figure>
+        </div>
+
+        <div class="row ">
+            <figure class="col-sm-6 center-block">
+                <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg" />
+                <p> Ralph's</p>
+            </figure>
+
+            <figure class="col-sm-6">
+                <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg" />
+                <p> Whole Foods</p>
+            </figure>
+        </div>
+    </section>
+
+
+    <footer class ="container text-center">
+        <div class="row">
+            <p class= "col-sm-4"> &copy; 2016 fetch() </p>
+        </div>
+    </footer>
 
 </body>
+
 </html>
