fixing some things

--- a/frontPage.html
+++ b/frontPage.html
@@ -30,25 +30,25 @@
 
         <div class="row ">
             <figure class="col-sm-6 ">
-                <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg" />
-                <p> Vons</p>
+                <img src="images/food1.jpg" />
+                <h2 class="name"> VONS </h2>
             </figure>
 
             <figure class="col-sm-6">
-                <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg" />
-                <p> TJ's</p>
+                <img src="images/food2.jpg" />
+                <h2 class="name"> TJ's</h2>
             </figure>
         </div>
 
         <div class="row ">
             <figure class="col-sm-6 center-block">
-                <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg" />
-                <p> Ralph's</p>
+                <img src="images/food3.jpg" />
+                <h2 class = "name"> Ralph's</h2kk>
             </figure>
 
             <figure class="col-sm-6">
-                <img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/kitchen.jpg" />
-                <p> Whole Foods</p>
+                <img src="images/food4.jpg" />
+                <h2 class="name"> Whole Foods</h2l>
             </figure>
         </div>
     </section>
