--- a/frontPage.html
+++ b/frontPage.html
@@ -29,24 +29,24 @@
     <section class="container-fluid text-center" id="food">
 
         <div class="row ">
-            <figure class="col-sm-6 ">
+            <figure class="col-sm-6" id="Vons">
                 <img src="images/food1.jpg" />
                 <h2 class="name"> VONS </h2>
             </figure>
 
-            <figure class="col-sm-6">
+            <figure class="col-sm-6" id ="Joe">
                 <img src="images/food2.jpg" />
                 <h2 class="name"> TJ's</h2>
             </figure>
         </div>
 
         <div class="row ">
-            <figure class="col-sm-6 center-block">
+            <figure class="col-sm-6 center-block" id="Ralph">
                 <img src="images/food3.jpg" />
                 <h2 class = "name"> Ralph's</h2kk>
             </figure>
 
-            <figure class="col-sm-6">
+            <figure class="col-sm-6" id="WF">
                 <img src="images/food4.jpg" />
                 <h2 class="name"> Whole Foods</h2l>
             </figure>
