changed the fonts for the names of the markets

--- a/frontPage.html
+++ b/frontPage.html
@@ -45,15 +45,17 @@
         <div class="row ">
             <figure class="col-sm-6 center-block" id="Ralph">
                 <img src="images/food3.jpg" />
-                <h2 class = "name"> Ralph's</h2kk>
+                <h2 class = "name"> Ralph's</h2>
             </figure>
 
             <figure class="col-sm-6" id="WF">
                 <img src="images/food4.jpg" />
-                <h2 class="name"> Whole Foods</h2l>
+                <h2 class="name"> Whole Foods</h2>
             </figure>
         </div>
     </section>
+
+    <hr>
 
 
     <footer class ="container text-center">
