--- a/frontPage.html
+++ b/frontPage.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <div class="container" id="header">
+    <div class="container text-center" id="header">
         <h1> FETCH </h1>
         <hr>
 
@@ -59,9 +59,7 @@
 
 
     <footer class ="container text-center">
-        <div class="row">
-            <p class= "col-sm-4"> &copy; 2016 fetch() </p>
-        </div>
+            <p> &copy; 2016 fetch() </p>
     </footer>
 
 </body>
