made the navBar fixed in position

--- a/frontPage.html
+++ b/frontPage.html
@@ -22,11 +22,12 @@
 
 <body>
 
-    <div class="container text-center" id="header">
-        <h1> FETCH </h1>
-        <hr>
 
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container text-center">
+        <h1> FETCH </h1>
     </div>
+</nav>
 
     <section class="container-fluid text-center" id="food">
 
@@ -53,13 +54,14 @@
                 <h2 class="name"> Whole Foods</h2>
             </figure>
         </div>
+
+        <hr>
     </section>
 
-    <hr>
 
 
     <footer class ="container text-center">
-            <p> &copy; 2016 fetch() </p>
+            <p> &copy; 2016 fetch { } </p>
     </footer>
 
 </body>
