--- a/public/test.html
+++ b/public/test.html
@@ -3,48 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <button ></button>
+
 
     <script src="jquery-2.2.js"></script>
 
 </head>
 <body>
+    <button id="button_1" class="red">   This is a button   </button>
+
+
     <script>
         var json = {
             "name" : "test_json",
             "content" : "test content goes in here",
-            "array_content" : [1, "a", null, true, false, 2.0],
-            "nested_object": {
-                "name": "im nested"
+            "array_content" : [1, 2, 3, 4],
+            "object": {
+                "name":"im nested!"
             }
-            "more_stuff" : [
-                {
-                    "prop":"another object",
-                    "more":{
-                        "name":"another object"
-                    }
-                },
-                {
-
-                },
-                null,
-                1
-            ]
         };
 
-        $(document).ready(function(){
+        $("#button_1").click(button_1_click);
 
+        function button_1_click(){
             $.ajax({
                 type: "POST",
                 url: "/post",
                 data: json,
                 success: function(response){
-                    console.log(response);
-                    alert("success!");
+
                 }
             });
+        }
 
-        });
+
+        function login(){
+            $.ajax({
+                type: "POST",
+                url: "/login",
+                data: json,
+                success: function(response){
+
+                }
+            });
+        }
+
     </script>
 
 
