--- a/frontEnd/shoppingList/index.html
+++ b/frontEnd/shoppingList/index.html
@@ -2,10 +2,10 @@
 <html lang="en" data-framework="jquery">
 	<head>
 		<meta charset="utf-8">
-		<title>Fetch</title>
+		<title> Fetch </title>
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
-        <link rel="stylesheet" href="css/app.css">
+		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
 		<section id="todoapp">
@@ -23,7 +23,7 @@
 		</footer>
 		<script id="todo-template" type="text/x-handlebars-template">
 			{{#this}}
-			<li>
+			<li {{#if completed}}class="completed" {{/if}} data-id="{{id}}">
 				<div class="view">
 					<label>{{title}}</label>
 					<button class="destroy"></button>
@@ -38,7 +38,7 @@
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="node_modules/jquery/dist/jquery.js"></script>
 		<script src="node_modules/handlebars/dist/handlebars.js"></script>
-		<script src="node_modules/director/build/director.js"></script>
+	<!--	<script src="node_modules/director/build/director.js"></script> -->
 		<script src="js/app.js"></script>
 	</body>
 </html>
