--- a/frontEnd/driverList/index.html
+++ b/frontEnd/driverList/index.html
@@ -10,18 +10,18 @@
 	<body>
 		<section id="todoapp">
 			<header id="header">
-				<h1>Shopping List</h1>
-				<input id="new-todo" placeholder="What do you need?" autofocus>
+				<h1>Driver List</h1>
+				<!--<input id="new-list" placeholder="What do you need?" autofocus>-->
 			</header>
 			<section id="main">
-				<input id="toggle-all" type="checkbox">
-				<label for="toggle-all">Mark all as complete</label>
+				<!--<input id="toggle-all" type="checkbox">-->
+				<!--<label for="toggle-all">Mark all as complete</label>-->
 				<ul id="todo-list"></ul>
 			</section>
 			<footer id="footer"></footer>
 		</section>
 		<footer id="info">
-			<p>Double-click to edit a todo</p>
+			<!--<p>Double-click to edit item</p>-->
 		</footer>
 		<script id="todo-template" type="text/x-handlebars-template">
 			{{#this}}
