--- a/frontEnd/shoppingList/index.html
+++ b/frontEnd/shoppingList/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
         <!-- jQuery library -->
-        <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
 	</head>
 	<body>
@@ -57,13 +57,13 @@
                             {{#if completedTodos}}<button id="clear-completed">Clear completed</button>{{/if}}
                         </script>
 
-                        <script src="node_modules/todomvc-common/base.js"></script>
-                        <script src="node_modules/jquery/dist/jquery.js"></script>
-                        <script src="node_modules/handlebars/dist/handlebars.js"></script>
-                    <!--	<script src="node_modules/director/build/director.js"></script> -->
-                        <script src="js/app.js"></script>
                </div>
            </div>
         </div>
 	</body>
+    <script src="node_modules/todomvc-common/base.js"></script>
+    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/handlebars/dist/handlebars.js"></script>
+    <!--	<script src="node_modules/director/build/director.js"></script> -->
+    <script src="js/app.js"></script>
 </html>
