--- a/frontEnd/frontPage/frontPage.html
+++ b/frontEnd/frontPage/frontPage.html
@@ -17,7 +17,7 @@
     <script type='text/javascript' src='script.js'></script>
 
     <!--from shopping list-->
-    <link rel="stylesheet" href="../shoppingList/node_modules/todomvc-common/base.css">
+    <!--<link rel="stylesheet" href="../shoppingList/node_modules/todomvc-common/base.css">-->
     <link rel="stylesheet" href="../shoppingList/node_modules/todomvc-app-css/index.css">
 
     <!-- myCSS -->
@@ -27,105 +27,74 @@
 
 <body>
 
+
+
+<!---------------------------------------------------  H E A D E R  --------------------------------------------------->
+
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container text-center">
             <h1> FETCH </h1>
-            <span><button class="createList">shopper</button></span>
-            <span><button class="pickUpList">driver</button></span>
-            <span><button class="homePage">home</button></span>
+            <span><button class="shop">shopper</button></span>
+            <span><button class="drive">driver</button></span>
+            <span><button class="home">home</button></span>
         </div>
     </nav>
 
-    <section class="container-fluid text-center page" id="home">
+
+<!-----------------------------------------------  H O M E  p a g e  -------------------------------------------------->
+
+    <section class="container-fluid text-center page hidden" id="home">
 
         <div class="row ">
             <figure class="col-sm-6" id="Vons">
-                <button class="createList">
+                <button class="shop">
                 <img src="images/food1.jpg" />
-                <h2 class="name"> VONS </h2>
+                <h2 class="name"> VONS </h2></button>
             </figure>
 
             <figure class="col-sm-6" id ="Joe">
+                <button class="shop">
                 <img src="images/food2.jpg" />
-                <h2 class="name"> TJ's</h2>
+                <h2 class="name"> TJ's</h2></button>
             </figure>
         </div>
 
         <div class="row ">
             <figure class="col-sm-6 center-block" id="Ralph">
+                <button class="shop">
                 <img src="images/food3.jpg" />
-                <h2 class = "name"> Ralph's</h2>
+                <h2 class = "name"> Ralph's</h2></button>
             </figure>
 
             <figure class="col-sm-6" id="WF">
+                <button class="shop">
                 <img src="images/food4.jpg" />
-                <h2 class="name"> Whole Foods</h2>
+                <h2 class="name"> Whole Foods</h2></button>
             </figure>
         </div>
 
         <hr>
     </section>
 
-    <div class="center page hidden" id="shopper">
-        <div class="row" id="Shopping" >
-            <div class="col-sm-6 " id="ShoppingList">
-                <section id="todoapp">
-                    <header id="header">
-                        <h1 id="listHeader">Shopping List</h1>
-                        <input id="new-todo" placeholder="What do you need?" autofocus>
-                    </header>
-                    <section id="main">
-                        <ul id="todo-list"></ul>
-                    </section>
-                    <footer id="footer"></footer>
-                </section>
 
-                <footer id="info">
-                    <p>Double-click to edit item</p>
-                </footer>
-
-                <script id="todo-template" type="text/x-handlebars-template">
-                    {{#this}}
-                    <li {{#if completed}}class="completed" {{/if}} data-id="{{id}}">
-                    <div class="view">
-                        <label>{{title}}</label>
-                        <button class="destroy"></button>
-                    </div>
-                    <input class="edit" value="{{title}}">
-                    </li>
-                    {{/this}}
-                </script>
-
-                <script id="footer-template" type="text/x-handlebars-template">
-                    <span id="todo-count"><strong>{{activeTodoCount}}</strong> {{activeTodoWord}} </span>
-                    <ul id="filters">
-                        <li>
-                            <a href="#/submit">Submit</a>
-                        </li>
-                    </ul>
-                    {{#if completedTodos}}<button id="clear-completed">Clear completed</button>{{/if}}
-                </script>
-
-            </div>
-        </div>
-    </div>
+<!--------------------------------------------  D R I V E R  p a g e  ------------------------------------------------->
 
     <div class="center page hidden" id="driver">
-        <div class="row" id="Shopping" >
-            <div class="col-sm-6 " id="ShoppingList">
-                <section id="todoapp">
-                    <header id="header">
+        <div class="row Shopping" >
+            <div class="col-sm-6 ShoppingList">
+                <section class="todoapp">
+                    <header class="header">
                         <h1>Driver List</h1>
                         <!--<input id="new-list" placeholder="What do you need?" autofocus>-->
                     </header>
-                    <section id="main">
+                    <section class="main">
                         <!--<input id="toggle-all" type="checkbox">-->
                         <!--<label for="toggle-all">Mark all as complete</label>-->
-                        <ul id="todo-list"></ul>
+                        <ul class="todo-list"></ul>
                     </section>
-                    <footer id="footer"></footer>
+                    <footer class="footer"></footer>
                 </section>
-                <footer id="info">
+                <footer class="info">
                     <!--<p>Double-click to edit item</p>-->
                 </footer>
                 <script id="todo-template" type="text/x-handlebars-template">
@@ -140,9 +109,9 @@
                     </li>
                     {{/this}}
                 </script>
-                <script id="footer-template" type="text/x-handlebars-template">
-                    <span id="todo-count"><strong>{{activeTodoCount}}</strong> {{activeTodoWord}} left</span>
-                    <ul id="filters">
+                <script class="footer-template" type="text/x-handlebars-template">
+                    <span class="todo-count"><strong>{{activeTodoCount}}</strong> {{activeTodoWord}}</span>
+                    <ul class="filters">
                         <li>
                             <a {{#eq filter 'all'}}class="selected"{{/eq}} href="#/all">All</a>
                         </li>
@@ -155,20 +124,69 @@
                     </ul>
                     {{#if completedTodos}}<button id="clear-completed">Clear completed</button>{{/if}}
                 </script>
-                </div>
             </div>
         </div>
+    </div>
 
 
-    <footer class ="container text-center">
+<!----------------------------------------  S H O P P E R p a g e  ---------------------------------------------------->
+
+    <div class="center page hidden" id="shopper">
+        <div class="row Shopping" >
+            <div class="col-sm-6 ShoppingList">
+                <section class="todoapp">
+                    <header class="header">
+                        <h1 id="listHeader">Shopping List</h1>
+                        <input id="new-todo" placeholder="What do you need?" autofocus>
+                    </header>
+                    <section class="main">
+                        <ul class="todo-list"></ul>
+                    </section>
+                    <footer class="footer"></footer>
+                </section>
+
+                <footer class="info">
+                    <p>Double-click to edit item</p>
+                </footer>
+
+                <script class="todo-template" type="text/x-handlebars-template">
+                    {{#this}}
+                    <li {{#if completed}}class="completed" {{/if}} data-id="{{id}}">
+                    <div class="view">
+                        <input class="toggle" type="checkbox" {{#if completed}}checked{{/if}}>
+                        <label>{{title}}</label>
+                        <button class="destroy"></button>
+                    </div>
+                    <input class="edit" value="{{title}}">
+                    </li>
+                    {{/this}}
+                </script>
+
+                <script class="footer-template" type="text/x-handlebars-template">
+                    <span class="todo-count"><strong>{{activeTodoCount}}</strong> {{activeTodoWord}} </span>
+                    <ul class="filters">
+                        <li>
+                            <a href="#/submit">Submit</a>
+                        </li>
+                    </ul>
+                    {{#if completedTodos}}<button class="clear-completed">Clear completed</button>{{/if}}
+                </script>
+            </div>
+        </div>
+    </div>
+
+
+<!------------------------------------------------  F O O T E R  ------------------------------------------------------>
+
+<footer class ="container text-center">
             <p> &copy; 2016 fetch { } </p>
     </footer>
 
 </body>
 
-    <script src="../shoppingList/node_modules/todomvc-common/base.js"></script>
-    <script src="../shoppingList/node_modules/jquery/dist/jquery.js"></script>
+    <!--<script src="../shoppingList/node_modules/todomvc-common/base.js"></script>-->
+    <!--<script src="../shoppingList/node_modules/jquery/dist/jquery.js"></script>-->
+<!--	<script src="node_modules/director/build/director.js"></script> -->
     <script src="../shoppingList/node_modules/handlebars/dist/handlebars.js"></script>
-    <!--	<script src="node_modules/director/build/director.js"></script> -->
-    <script src="../shoppingList/js/app.js"></script>
+    <script src="app.js"></script>
 </html>
