--- a/frontEnd/frontPage/frontPage.html
+++ b/frontEnd/frontPage/frontPage.html
@@ -18,7 +18,8 @@
 
     <!--from shopping list-->
     <!--<link rel="stylesheet" href="../shoppingList/node_modules/todomvc-common/base.css">-->
-    <link rel="stylesheet" href="../shoppingList/node_modules/todomvc-app-css/index.css">
+    <!--<link rel="stylesheet" href="../shoppingList/node_modules/todomvc-app-css/index.css">-->
+    <link rel="stylesheet" href="index.css">
 
     <!-- myCSS -->
     <link rel="stylesheet" type="text/css" href="styles.css">
