--- a/template.html
+++ b/template.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="css/slide-in-panel.css">
     <link rel="stylesheet" href="css/style.css">
     <script>
-        //Loads the requested page content passed by hash
-
         function loadPage() {
             $.ajax({
                 type: "POST",
@@ -21,7 +21,19 @@
             });
         }
 
+        function loadLogin() {
+            $.ajax({
+                type: "POST",
+                data: {"name": "login.html"},
+                url: "/",
+                success: function (data) {
+                    $('#login').html(data);
+                }
+            });
+        }
+
         $(document).ready(function(){
+            loadLogin();
             if (window.location.hash.length > 0) {
                 loadPage();
             }
@@ -31,9 +43,9 @@
         });
 
         window.onhashchange = loadPage;
-
     </script>
 </head>
+
 <body>
 
 <!--All style should go in the scss files. Avoid inline styles as much as possible (basically always)-->
@@ -42,23 +54,12 @@
     <h1 style="position:absolute; top:15px">FETCH</h1>
 </div>
 <div style="position:absolute; right:5%; top:1%">
-
-
-
     <ul class="nav navbar-nav navbar-right">
-
-
         <li><a href="#0" class="cd-btn" id="test_1"><span class=" glyphicon glyphicon-user large"></span></a></li>
-
-
     </ul>
-
-
-
-
 </div>
 <div id="page-content" >
-
+    <!--body content is inserted here for now. Eventually will be very different and animated.-->
 </div>
 
 <div class="cd-panel from-right">
@@ -68,8 +69,8 @@
     </header>
 
     <div class="cd-panel-container">
-        <div class="cd-panel-content">
-            <iframe width="100%" height=100% src="login.html" name="iframe_a"></iframe>
+        <div class="cd-panel-content" id="login">
+
         </div> <!-- cd-panel-content -->
     </div> <!-- cd-panel-container -->
 </div> <!-- cd-panel -->
