Slight update to rating

--- a/rating.html
+++ b/rating.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <div id="rating-page">
-    <!-- Using Materializecss; bootstrap would work similarly-->
+    <!-- Im using Materializecss because im more familiar with itatm; bootstrap would work as a mostly drop in replacement-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+
 
 
     <div class="container">
@@ -54,7 +54,6 @@
             name: "Bob",
             "profile-picture": null
         };
-
         var info_to_send = {};
 
 
