--- a/frontEnd/Jen/GroceryList.html
+++ b/frontEnd/Jen/GroceryList.html
@@ -1,3 +1,5 @@
+<script src="/js/load.js"></script>
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -11,11 +13,12 @@
         <title>Grocery List</title>
         <link rel="stylesheet" href="css/style.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-        <script src="js/script.js"></script>
+
     </head>
     <body>
-
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="js/script.js"></script>
+<div id="gracoeryList"></div>
 
     <div class="container-fluid">
 
