Fixed all issues with template. Now just make the directory absolute and go

--- a/frontEnd/frontPage/frontPage.html
+++ b/frontEnd/frontPage/frontPage.html
@@ -11,18 +11,18 @@
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
-    <!-- my javaScript -->
-    <script type='text/javascript' src='script.js'></script>
-
-    <!--from shopping list-->
-    <link rel="stylesheet" href="index.css">
-
-    <!-- myCSS -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
 <body>
+<!-- my javaScript -->
+<script type='text/javascript' src='/frontEnd/frontPage/script.js'></script>
+
+<!--from shopping list-->
+<link rel="stylesheet" href="/frontEnd/frontPage/index.css">
+
+<!-- myCSS -->
+<link rel="stylesheet" type="text/css" href="/frontEnd/frontPage/styles.css">
 
 <!---------------------------------------------------  H E A D E R  --------------------------------------------------->
 
@@ -177,8 +177,8 @@
             <p> &copy; 2016 fetch { } </p>
     </footer>
 
+<script src="/frontEnd/frontPage/handlebars.js"></script>
+<script src="/frontEnd/frontPage/app.js"></script>
 </body>
 
-    <script src="handlebars.js"></script>
-    <script src="app.js"></script>
 </html>
