to-do list css basic

--- a/frontEnd/Jen/GroceryList.html
+++ b/frontEnd/Jen/GroceryList.html
@@ -11,13 +11,13 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
         <title>Grocery List</title>
-        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" href="style.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
     </head>
     <body>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 <div id="gracoeryList"></div>
 
     <div class="container-fluid">
@@ -25,20 +25,24 @@
         <!-- list -->
         </p>
         <h1>Grocery Items:</h1>
-        <form name="form" >
-            <input class="input" type="text" name="checkListItem" autofocus/>
+       <!-- <form name="form" >
+            <input class="input" type="text" name="checkListItem" placeholder="What do you need?" autofocus/>
         </form>
-        <div id="button">Add</div></br>
-        <div id="list"></div>
+   <!--     <div id="button">Add</div></br> -->
+        <div id="list">
+            <form name="form" >
+                <span><input class="input" type="text" name="checkListItem" placeholder="What do you need?" autofocus /></span>
+            </form>
+        </div>
 
-        <!-- arrow -->
+        <!-- arrow
         <div id="arrow">
             <p>▼</p>
         </div>
             </br>
-
+        -->
         <!-- notes -->
-        <div>
+       <!-- <div>
             <h4>Notes: If Driver cannot find your specified item, they should ... </h4></br>
             <form action="">
                 <input type="radio" name="notes" value="none"> Not buy the item<br>
@@ -46,9 +50,9 @@
                 <input type="radio" name="notes" value="best"> Buy best/expensive brand available<br>
             </form>
         <!--    <input class="notes"type="text"> -->
-        </div></br>
+      <!--  </div></br>
         <!-- time -->
-        <div>
+     <!--   <div>
             <h4>Pick Up Time(s):</h4>
             <input class="time"type="text">
         </div></br>
@@ -68,12 +72,12 @@
         <div id="submit">Submit</div></br>
 
         <!-- dialog -->
-        <div class="confirm">
+     <!--   <div class="confirm">
             <h1>Continue to Checkout</h1>
             <p>Confirm if your grocery list is correct. Click to continue to checkout.</p>
             <button id="history">Checkout</button>
             <button id="close">Not Ready Yet</button>
-        </div>
+        </div>-->
 
     </div>
 
