hopefully fixed some template issues

--- a/template.html
+++ b/template.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-    <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="frontEnd/Soheil/slide-in-panel/css/reset.css"> <!-- CSS reset -->
-    <link rel="stylesheet" href="frontEnd/Soheil/slide-in-panel/css/style.css"> <!-- Resource style -->
-    <link rel="stylesheet" href="frontEnd/Soheil/styling.css">
-
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<!-- <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script> --> 
+
+    <link rel="stylesheet" href="frontEnd/Soheil/slide-in-panel/css/reset.css"> <!-- CSS reset -->
+    <link rel="stylesheet" href="frontEnd/Soheil/styling.css">
+    <link rel="stylesheet" href="/css/slide-in-panel.css">
+    <link rel="stylesheet" href="/css/style.css">
+
+    <!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
+
+    <!--<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
+	<!-- <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script> -->
     <script src="frontEnd/Soheil/slide-in-panel/js/modernizr.js"></script> <!-- Modernizr -->
 	<script src="frontEnd/Soheil/slide-in-panel/js/jquery-2.1.1.js"></script>
 	<script src="frontEnd/Soheil/slide-in-panel/js/main.js"></script> <!-- Resource jQuery -->
+
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 
@@ -31,10 +34,6 @@
     <ul class="nav navbar-nav navbar-right">
         <li><a href="#0" class="cd-btn" id="test_1"><span class=" glyphicon glyphicon-user large"></span></a></li>
     </ul>
-</div>
-
-<div id="page-content" style="width:100%; height:100%; position:absolute; top:8%; overflow: hidden" >
-    <!--<object  width="100%" style="position:absolute; height:100%" id="pageOrg" data="frontEnd/frontPage/frontPage.html"></object>-->
 </div>
 
 <div class="cd-panel from-right">
@@ -67,6 +66,12 @@
         });
     });
 </script>
+
+<div id="page-content" >
+    <!--DO NOT CHANGE THIS COMMENT-->
+    <!--body content is inserted here for now. Eventually will be very different and animated.-->
+
+</div>
 
 <hr>
 
