Fixed template and login. CSS conflicts not yet fixed.

--- a/template.html
+++ b/template.html
@@ -11,11 +11,11 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <link rel="stylesheet" href="frontEnd/Soheil/slide-in-panel/css/reset.css"> <!-- CSS reset -->
-    <link rel="stylesheet" href="frontEnd/Soheil/slide-in-panel/css/style.css"> <!-- Resource style -->
-    <link rel="stylesheet" href="frontEnd/Soheil/styling.css">
+    <link rel="stylesheet" href="/frontEnd/Soheil/slide-in-panel/css/reset.css"> <!-- CSS reset -->
+    <link rel="stylesheet" href="/frontEnd/Soheil/slide-in-panel/css/style.css"> <!-- Resource style -->
+    <link rel="stylesheet" href="/frontEnd/Soheil/styling.css">
 
-    <script src="frontEnd/Soheil/slide-in-panel/js/modernizr.js"></script> <!-- Modernizr -->
+    <script src="/frontEnd/Soheil/slide-in-panel/js/modernizr.js"></script> <!-- Modernizr -->
 </head>
 <body>
 <div style="position:absolute; right:55%; top:0% ">
@@ -49,12 +49,12 @@
 
     <div class="cd-panel-container">
         <div class="cd-panel-content">
-            <iframe width="100%" height=100% src="frontEnd/Soheil/login.html" name="iframe_a"></iframe>
+            <iframe width="100%" height=100% src="/frontEnd/Soheil/login.html" name="iframe_a"></iframe>
         </div> <!-- cd-panel-content -->
     </div> <!-- cd-panel-container -->
 </div> <!-- cd-panel -->
-<script src="frontEnd/Soheil/slide-in-panel/js/jquery-2.1.1.js"></script>
-<script src="frontEnd/Soheil/slide-in-panel/js/main.js"></script> <!-- Resource jQuery -->
+<script src="/frontEnd/Soheil/slide-in-panel/js/jquery-2.1.1.js"></script>
+<script src="/frontEnd/Soheil/slide-in-panel/js/main.js"></script> <!-- Resource jQuery -->
 <script>
     jQuery(document).ready(function($){
         //open the lateral panel
