Full template fix

--- a/_homePage.html
+++ b/_homePage.html
@@ -27,7 +27,7 @@
             <figure class="col-sm-6" id="WF">
                 <button class="shop">
                     <img src="/resources/images/food4.jpg" />
-                    <h2 class="name"> Whole Foods</h2Gk></button>
+                    <h2 class="name"> Whole Foods</h2></button>
             </figure>
         </div>
 
