--- a/template.html
+++ b/template.html
@@ -7,11 +7,11 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="/frontEnd/Soheil/slide-in-panel/css/style.css"> <!-- Resource style -->
-    <link rel="stylesheet" href="/frontEnd/Soheil/styling.css">
+
+    <link rel="stylesheet" href="/css/slide-in-panel.css    ">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
 
 <div style="position:absolute; right:55%; top:0% ">
     <h1 style="position:absolute; top:15px">FETCH</h1>
@@ -52,13 +52,11 @@
     });
 </script>
 
-<div id="page-content" >
+<div id="page-content" style="height: 2000px">
     <!--DO NOT CHANGE THIS COMMENT-->
     <!--body content is inserted here for now. Eventually will be very different and animated.-->
 
 </div>
-
-<hr>
 
 </body>
 </html>
