--- a/template.html
+++ b/template.html
@@ -12,13 +12,14 @@
 </head>
 <body>
 
-<div style="position:absolute; right:55%; top:0% ">
-    <h1 style="position:absolute; top:15px">FETCH</h1>
-</div>
-<div style="position:absolute; right:5%; top:1%">
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="#0" class="cd-btn" id="test_1"><span class=" glyphicon glyphicon-user large"></span></a></li>
-    </ul>
+
+
+<div class="container">
+    <div class="row">
+        <div class="col-l3">
+
+        </div>
+    </div>
 </div>
 
 
