--- a/template.html
+++ b/template.html
@@ -14,16 +14,16 @@
 
 
 
-<div class="container">
-    <div class="row">
-        <div class="col-l3">
+<div class="container" style="position:fixed">
 
-        </div>
-    </div>
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="#0" class="cd-btn" id="test_1"><span class="glyphicon glyphicon-user"></span></a></li>
+    </ul>
+
 </div>
 
 
-<div id="page-content" style="height: 2000px">
+<div id="page-content" style="padding-top:100px; height:2000px">
     <!--DO NOT CHANGE THIS COMMENT-->
     <!--body content is inserted here for now. Eventually will be very different and animated.-->
 
