--- a/_rating.html
+++ b/_rating.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div id="rating-page">
-    <!-- Im using Materializecss because im more familiar with itatm; bootstrap would work as a mostly drop in replacement-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--&lt;!&ndash; Im using Materializecss because im more familiar with itatm; bootstrap would work as a mostly drop in replacement&ndash;&gt;-->
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">-->
+    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
 
 
 
