--- a/template.html
+++ b/template.html
@@ -13,23 +13,25 @@
 <body>
 
 
+<div style="position:fixed; width: 100%; height: 50px;z-index: 2000; top: 0; background-color: aquamarine">
+    <div class="container-fluid">
+        <div class="col-l-3"></div>
+        <div class="col-l-6"></div>
+        <div class="col-l-3">
+            <div class="cd-btn btn btn-lg pull-right"><span class="glyphicon glyphicon-user large"></span></div>
+        </div>
 
-<div class="container" style="position:fixed">
-
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="#0" class="cd-btn" id="test_1"><span class="glyphicon glyphicon-user"></span></a></li>
-    </ul>
-
+    </div>
 </div>
 
 
-<div id="page-content" style="padding-top:100px; height:2000px">
+<div id="page-content" style="margin-top: 100px;">
     <!--DO NOT CHANGE THIS COMMENT-->
     <!--body content is inserted here for now. Eventually will be very different and animated.-->
 
 </div>
 
-<div class="cd-panel from-right">
+<div class="cd-panel from-right" style="z-index: 3000">
     <header class="cd-panel-header">
         <h1>Title Goes Here</h1>
         <a href="#0" class="cd-panel-close">Close</a>
@@ -44,17 +46,15 @@
 
 
 <script>
-    jQuery(document).ready(function($){
+    jQuery(document).ready(function ($) {
         //open the lateral panel
-        $('.cd-btn').on('click', function(event){
-            event.preventDefault();
+        $('.cd-btn').on('click', function (event) {
             $('.cd-panel').addClass('is-visible');
         });
         //clode the lateral panel
-        $('.cd-panel').on('click', function(event){
-            if( $(event.target).is('.cd-panel') || $(event.target).is('.cd-panel-close') ) {
+        $('.cd-panel').on('click', function (event) {
+            if ($(event.target).is('.cd-panel') || $(event.target).is('.cd-panel-close')) {
                 $('.cd-panel').removeClass('is-visible');
-                event.preventDefault();
             }
         });
     });
