--- a/template.html
+++ b/template.html
@@ -15,12 +15,11 @@
 
 <div style="position:fixed; width: 100%; height: 50px;z-index: 2000; top: 0; background-color: aquamarine">
     <div class="container-fluid">
-        <div class="col-l-3"></div>
-        <div class="col-l-6"></div>
-        <div class="col-l-3">
+        <div class="col-xs-3"></div>
+        <div class="col-xs-6" style="text-align: center"><h1>Fetch</h1></div>
+        <div class="col-xs-3">
             <div class="cd-btn btn btn-lg pull-right"><span class="glyphicon glyphicon-user large"></span></div>
         </div>
-
     </div>
 </div>
 
