--- a/_driverList.html
+++ b/_driverList.html
@@ -19,7 +19,7 @@
 
 <!--</head>-->
 <body>
-<div id="checkboxes">
+<div id="driver">
     <div class="row">
         <div class="col-xs-12">
             <h3 class="text-center">Gary's Shopping List</h3>
