--- a/_tickets.html
+++ b/_tickets.html
@@ -1,26 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Fetch|Avaliable tickets</title>
-    <link rel="stylesheet" href="./scss/_tickets.scss">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Fetch|Avaliable tickets</title>-->
+    <!--<link rel="stylesheet" href="./scss/_tickets.scss">-->
+    <!--&lt;!&ndash; Latest compiled and minified CSS &ndash;&gt;-->
+    <!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
 
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <!--&lt;!&ndash; jQuery library &ndash;&gt;-->
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>-->
 
-    <!-- Latest compiled JavaScript -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <!--&lt;!&ndash; Latest compiled JavaScript &ndash;&gt;-->
+    <!--<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>-->
 
-</head>
+<!--</head>-->
 <body>
-
-<header>
-    <h1>Avaliable Tickets</h1>
-</header>
+<div id="tickets">
+<h1>Avaliable Tickets</h1>
 <div class="container-fluid">
     <ul id="buttons">
         <!--<div class="row" >-->
@@ -86,10 +84,17 @@
                             arr.push(this.innerHTML);
                         });
 
-                        for (var j = 0; j < arr.length; j ++){
-                            for(var i = 0; i <tickets.length; i ++) {
-                                if (arr[j] === tickets[i].name) {
-                                    $("#thisone").append('<li class = ' + tickets[i].name + '><button class="btn-block" name =' + tickets[i].name + ' >' + tickets[i].name + ' <br> Estimate Deliver Time: ' + tickets[i].time + '</button></li>');
+                        if(arr.length === 0){
+                            for (var i = 0; i < tickets.length; i++) {
+                                $("#thisone").append('<li class = ' + tickets[i].name + '><button class="btn-block" name =' +tickets[i].name+ ' >' + tickets[i].name + ' <br> Estimate Deliver Time: ' + tickets[i].time + '</button></li>');
+                            }
+                        }
+                        else {
+                            for (var j = 0; j < arr.length; j++) {
+                                for (var i = 0; i < tickets.length; i++) {
+                                    if (arr[j] === tickets[i].name) {
+                                        $("#thisone").append('<li class = ' + tickets[i].name + '><button class="btn-block" name =' + tickets[i].name + ' >' + tickets[i].name + ' <br> Estimate Deliver Time: ' + tickets[i].time + '</button></li>');
+                                    }
                                 }
                             }
                         }
@@ -100,5 +105,6 @@
         </script>
     </ul>
     </div>
+</div>
 </body>
 </html>
