--- a/template.html
+++ b/template.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
@@ -13,12 +14,14 @@
 <body>
 
 
-<div style="position:fixed; width: 100%; height: 50px;z-index: 2000; top: 0; background-color: aquamarine">
+<div style="position:fixed; width: 100%; height: 50px;z-index: 2000; top: 0">
     <div class="container-fluid">
+        <div class="row">
         <div class="col-xs-3"></div>
         <div class="col-xs-6" style="text-align: center"><h1>Fetch</h1></div>
         <div class="col-xs-3">
             <div class="cd-btn btn btn-lg pull-right"><span class="glyphicon glyphicon-user large"></span></div>
+        </div>
         </div>
     </div>
 </div>
